--- a/index.html
+++ b/index.html
@@ -36,11 +36,7 @@
                 Es de venezuela, pero ahora vive en USA un KPO
             </li>
             <li>
-                Es muy buen programador hasta creo una vaina que se llama 
-                <a href="https://crafy.net/">crafy</a>
-                que nadie entiende pero lo creo papi Freddy asi que es jodidamente bueno
-
-            </li>
+                Es muy buen programador hasta creo una vaina que se llama <a href="https://crafy.net/">crafy</a> que nadie entiende pero lo creo papi Freddy asi que es jodidamente bueno</li>
             <li>
                 Tiene <a href="https://github.com/freddyjd">github</a>, aunque es alto SIMP alli
             </li>
@@ -50,7 +46,9 @@
             <li>
                 Es el puto amo y es <a href="https://www.trilogyed.com/blog/just-say-yes-how-boot-camp-helped-this-18-year-old-from-venezuela-pursue-his-american-dream/">super inteligente</a>
             </li>
+            <li>
             repito en github es alto <a href="https://twitter.com/scidroid/status/1319088000211570688">SIMP</a>
+            </li>
             <li>
                 Sigue a SciDroid en Github no un KPO.
             </li>
