--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="container">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobiri.se">
+                    <a href="https://papifreddy.tk">
                         <img src="assets/images/uwu-96x54.jpeg" alt="Papi Freddy" style="height: 3rem;">
                     </a>
                 </span>
