--- a/index.html
+++ b/index.html
@@ -98,7 +98,40 @@
 <br>
 <br>"Lo más difícil de superar para mí fue la barrera del idioma", dijo Freddy. "Cuando empecé el curso, sólo había estado en los EE.UU. durante tres semanas. Mi inglés no era muy bueno, así que me senté en la última fila."
 <br>
-<br>Contenido proporcionado por <a href="https://www.trilogyed.com/blog/just-say-yes-how-boot-camp-helped-this-18-year-old-from-venezuela-pursue-his-american-dream/" class="text-primary" target="_blank">Trylogied</a>.</p>
+<br>Pero Freddy descubrió rápidamente que la codificación es un lenguaje universal, especialmente si te gusta resolver problemas y asumir nuevos retos.
+<br>
+<br>Los obstáculos son sólo otra parte de la codificación
+<br>Desde el principio, Freddy se enfrentó a obstáculos de frente. "Cuando empecé el campo de entrenamiento, me encontré con muchos obstáculos", dijo Freddy. "Mi instructor Jeff me dijo que la codificación iba a ser así. Así que incluso dije '¡sí!' a los obstáculos y a la dura tarea de la clase".
+<br>
+<br>Pero la clave para superar los desafíos para Freddy no era sólo una actitud positiva. "Tienes que ser muy bueno en el manejo del tiempo para tener éxito en el campo de entrenamiento", aconsejó Freddy. "Cuando organicé mi tiempo, empecé a hacer verdaderos progresos con las API y nuevos lenguajes como GraphQL".
+<br>
+<br>Freddy incluso puso a prueba sus habilidades de codificación fuera de la clase.
+<br>
+<br>"En pocas semanas, estaba haciendo cosas del lado del servidor con mi Google Home", recordó Freddy. "¡Compré un chip sensor de 10 dólares, lo conecté a mi cuenta de Amazon, y escribí un código para hackear mi nevera y pedir más leche cuando se me acabara!"
+<br>
+<br>Claramente, nada se iba a interponer en el camino de Freddy.
+<br>
+<br>Programación para el mundo real
+<br>El voraz apetito de Freddy por el aprendizaje es sólo una de las razones por las que logró su objetivo de convertirse en un desarrollador web. También sabe cómo resolver problemas del mundo real.
+<br>
+<br>"La forma en que gané suficiente dinero para mudarme a los Estados Unidos fue monetizando los anuncios para el YouTube latinoamericano", explicó Freddy. "El problema es que no hay una buena manera de medir el retorno de la inversión de los anuncios, especialmente para los influyentes sociales".
+<br>
+<br>Uno de los proyectos de clase de Freddy fue una forma de arreglar ese problema.
+<br>
+<br>"Mi proyecto más exitoso fue una lista de análisis llamada Proyecto Lisa", dijo Freddy. "Diseñamos un plugin y escribimos un algoritmo para analizar el precio fijo de un influenciador para dar a los anunciantes una forma de rastrear el retorno de la inversión en la publicidad. Incluso usamos datos del mundo real para verificar que el programa es 99% exacto."
+<br>
+<br>Y esto no fue sólo una tarea de clase. Hasta la fecha, el plug-in de Freddy ha recibido varios cientos de descargas en NPM.com.
+<br>
+<br>Hasta el infinito y más allá
+<br>Como joven de 18 años, Freddy tiene un largo y prometedor futuro por delante, y ya está empezando.
+<br>
+<br>"Ya tengo un montón de trabajo independiente en Upwork, y he conseguido un puesto como desarrollador de primera línea para Rackcrate Networks gracias al campo de entrenamiento. También planeo continuar trabajando con el Proyecto Lisa", dijo Freddy. "Pero realmente quiero conseguir un trabajo en Google, Facebook o Apple".
+<br>
+<br>Pero su verdadera meta es salir de este mundo. "Si pudiera hacer algo, sería trabajar en la NASA. Me gustaría empezar con una puesta en marcha de un software centrado en la exploración espacial. Pero todavía tengo que aprender la IA y empezar a hacer proyectos de exploración espacial para la NASA o para mí mismo", concluyó.
+<br>
+<br>Después de desarraigar su vida y aprender más de un nuevo idioma, nada está fuera del alcance de Freddy. Y a todos aquellos que buscan seguir sus pasos, tiene el mismo consejo: simplemente digan que sí.
+<br>
+<br>Contenido proporcionado por <a href="https://www.trilogyed.com/blog/just-say-yes-how-boot-camp-helped-this-18-year-old-from-venezuela-pursue-his-american-dream/" class="text-primary" target="_blank">Trilogyed</a>.</p>
             </div>
         </div>
     </div>
